replaces a deprecated class